@@ -27,8 +27,8 @@ from hahomematic.const import (
     HM_VIRTUAL_REMOTES,
     PORT_RFD,
     PROXY_DE_INIT_FAILED,
-    PROXY_DE_INIT_SUCCESS,
     PROXY_DE_INIT_SKIPPED,
+    PROXY_DE_INIT_SUCCESS,
     PROXY_INIT_FAILED,
     PROXY_INIT_SUCCESS,
     RELEVANT_PARAMSETS,
