@@ -135,24 +135,12 @@ IGNORED_PARAMETERS = [
     "DEVICE_IN_BOOTLOADER",
     "DEW_POINT_ALARM",
     "EMERGENCY_OPERATION",
-    "ENTER_BOOTLOADER",
-    "ERROR_CODE",
-    "ERROR_DEGRADED_CHAMBER",
-    "ERROR_NON_FLAT_POSITIONING",
-    "ERROR_OVERLOAD",
-    "ERROR_POWER_FAILURE",
-    "ERROR_REDUCED",
-    "ERROR_UNDERVOLTAGE",
-    "ERROR_UPDATE",
-    "ERROR_WIND_COMMUNICATION",
-    "ERROR_WIND_NORTH",
     "EXTERNAL_CLOCK",
     "FROST_PROTECTION",
     "HEATING_COOLING",
     "HUMIDITY_LIMITER",
     "INCLUSION_UNSUPPORTED_DEVICE",
     "INHIBIT",
-    "INSTALL_TEST",
     "INSTALL_MODE",
     "PARTY_SET_POINT_TEMPERATURE",
     "PARTY_TIME_END",
@@ -160,10 +148,6 @@ IGNORED_PARAMETERS = [
     "PROCESS",
     "QUICK_VETO_TIME",
     "SECTION",
-    "STATUS_FLAG_ERROR",
-    "STATUS_FLAG_LOW_BAT",
-    "STATUS_FLAG_PLAYING_FILE_ACTIVE",
-    "STATUS_FLAG_PLAYLIST_ACTIVE",
     "STICKY_UNREACH",
     "SWITCH_POINT_OCCURED",
     "TEMPERATURE_LIMITER",
@@ -174,13 +158,17 @@ IGNORED_PARAMETERS = [
     "WOCHENPROGRAMM",
 ]
 
-IGNORED_PARAMETERS_WILDCARDS = [
+IGNORED_PARAMETERS_WILDCARDS_END = [
     "OVERFLOW",
     "OVERHEAT",
     "OVERRUN",
     "RESULT",
     "STATUS",
     "WORKING",
+]
+IGNORED_PARAMETERS_WILDCARDS_START = [
+    "ERROR",
+    "STATUS_FLAG",
 ]
 
 HIDDEN_PARAMETERS = [PARAM_UN_REACH, PARAM_CONFIG_PENDING]
@@ -260,9 +248,9 @@ TYPE_ACTION = "ACTION"  # Usually buttons, send Boolean to trigger
 
 FLAG_VISIBLE = 1
 FLAG_INTERAL = 2
-FLAG_TRANSFORM = 4
+# FLAG_TRANSFORM = 4 # not used
 FLAG_SERVICE = 8
-FLAG_STICKY = 10  # This might be wrong. Documentation says 0x10
+# FLAG_STICKY = 10  # This might be wrong. Documentation says 0x10 # not used
 
 DEFAULT_PASSWORD = None
 DEFAULT_PATH = None
